# Rendering

./: .gitignore  CMakeLists.txt  imgui.ini
cmake/: IncludeGLAD.cmake  IncludeGLFW.cmake  IncludeImGui.cmake
scripts/: cmake-run.bat
src/: CMakeLists.txt  main.cpp
src/RayTracing/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
